--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -301,6 +301,14 @@
             </instanceof>
          </enablement>
       </renderingBindings>
+      <renderingBindings
+            class="devcpu.launch.DCPUMemoryRenderingBinding">
+         <enablement>
+            <instanceof
+                  value="devcpu.launch.DCPUMemoryBlock">
+            </instanceof>
+         </enablement>
+      </renderingBindings>
    </extension>
    <extension
          point="org.eclipse.debug.core.launchConfigurationTypes">
