--- a/devcpu.DASM.ui/plugin.xml
+++ b/devcpu.DASM.ui/plugin.xml
@@ -6,12 +6,13 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="devcpu.ui.DASMExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="dasm,dasm16"
-            id="devcpu.DASM"
-            name="DASM Editor">
+              class="devcpu.ui.DASMExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+              contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+              default="true"
+              extensions="dasm,dasm16"
+              icon="dasm.png"
+              id="devcpu.DASM"
+              name="DASM Editor">
         </editor>
     </extension>
     <extension
