Updated LWJGL and added missing binaries for Windows, Linux, Mac OS X, and Solaris

--- a/DevCPU/build.properties
+++ b/DevCPU/build.properties
@@ -5,19 +5,21 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               AppleJavaExtensions.jar,\
-               asm-debug-all.jar,\
-               jinput.jar,\
-               lwjgl_test.jar,\
-               lwjgl_util_applet.jar,\
-               lwjgl-debug.jar,\
-               lwjgl_util.jar,\
-               lwjgl.jar,\
-               lzma.jar,\
                OpenAL64.dll,\
                OpenAL32.dll,\
                jinput-raw_64.dll,\
                jinput-raw.dll,\
                jinput-dx8_64.dll,\
                jinput-dx8.dll,\
-               lwjgl64.dll
+               lwjgl64.dll,\
+               lwjgl_util.jar,\
+               AppleJavaExtensions.jar,\
+               asm-debug-all.jar,\
+               jinput.jar,\
+               lwjgl_test.jar,\
+               lwjgl_util_applet.jar,\
+               lwjgl-debug.jar,\
+               lzma.jar,\
+               lwjgl.dll,\
+               lwjgl.jar
+jars.compile.order = .
