--- a/DevCPU/.classpath
+++ b/DevCPU/.classpath
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lzma.jar"/>
-	<classpathentry exported="true" kind="lib" path="lwjgl.jar"/>
-	<classpathentry exported="true" kind="lib" path="lwjgl_util.jar"/>
-	<classpathentry exported="true" kind="lib" path="lwjgl-debug.jar"/>
 	<classpathentry exported="true" kind="lib" path="lwjgl_util_applet.jar"/>
 	<classpathentry exported="true" kind="lib" path="lwjgl_test.jar"/>
 	<classpathentry exported="true" kind="lib" path="jinput.jar"/>
 	<classpathentry exported="true" kind="lib" path="asm-debug-all.jar"/>
 	<classpathentry exported="true" kind="lib" path="AppleJavaExtensions.jar"/>
+	<classpathentry exported="true" kind="lib" path="lwjgl_util.jar"/>
+	<classpathentry exported="true" kind="lib" path="lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="DevCPU/native/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
