--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -107,7 +107,7 @@
                minimized="false"
                ratio="0.6"
                relationship="bottom"
-               relative="developmentnavigator">
+               relative="org.eclipse.ui.navigator.ProjectExplorer">
          </view>
          <newWizardShortcut
                id="devcpu.dasmfilewizard">
