--- a/DevCPU/build.properties
+++ b/DevCPU/build.properties
@@ -21,5 +21,6 @@ bin.includes = plugin.xml,\
                lwjgl-debug.jar,\
                lzma.jar,\
                lwjgl.dll,\
-               lwjgl.jar
+               lwjgl.jar,\
+               exp4j-0.3.10.jar
 jars.compile.order = .
