Resolved (or in a few cases, suppressed) all warnings in DevCPU

--- a/DevCPU/build.properties
+++ b/DevCPU/build.properties
@@ -24,3 +24,4 @@ bin.includes = plugin.xml,\
                lwjgl.jar,\
                exp4j-0.3.10.jar
 jars.compile.order = .
+jre.compilation.profile = JavaSE-1.6
