--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -417,7 +417,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="devcpu.DASM"
+            category="devcpu.dasm.coloring"
             class="devcpu.editors.dasm.SyntaxColoringPreferencePage"
             id="devcpu.dasm.coloring"
             name="Syntax Coloring">
