Multiplatform preps for Release 0

--- a/DevCPU/build.properties
+++ b/DevCPU/build.properties
@@ -1,4 +1,3 @@
-source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
@@ -22,6 +21,17 @@ bin.includes = plugin.xml,\
                lzma.jar,\
                lwjgl.dll,\
                lwjgl.jar,\
-               exp4j-0.3.10.jar
+               exp4j-0.3.10.jar,\
+               plugin_customization.ini,\
+               libjinput-linux.so,\
+               libjinput-osx.jnilib,\
+               libjinput-linux64.so,\
+               liblwjgl.jnilib,\
+               liblwjgl.so,\
+               liblwjgl64.so,\
+               libopenal.so,\
+               libopenal64.so,\
+               openal.dylib
 jars.compile.order = .
+source.. = src/
 jre.compilation.profile = JavaSE-1.6
