--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -232,12 +232,12 @@
             application="DevCPU.application"
             name="DevCPU">
          <property
-               name="windowImages"
-               value="icons/alt_window_16.gif,icons/alt_window_32.gif">
-         </property>
-         <property
                name="appName"
                value="DevCPU">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
          </property>
       </product>
    </extension>
