--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -508,5 +508,32 @@
             markerType="org.eclipse.debug.core.lineBreakpointMarker">
       </breakpoint>
    </extension>
+   <extension
+         point="org.eclipse.ui.intro">
+      <intro
+            class="org.eclipse.ui.intro.config.CustomizableIntroPart"
+            id="DevCPU.intro">
+      </intro>
+      <introProductBinding
+            introId="DevCPU.intro"
+            productId="DevCPU.product">
+      </introProductBinding>
+   </extension>
+   <extension
+         point="org.eclipse.ui.intro.config">
+      <config
+            content="introContent.xml"
+            id="DevCPU.introConfigId"
+            introId="DevCPU.intro">
+         <presentation
+               home-page-id="root">
+            <implementation
+                  kind="html"
+                  os="win32,linux,macosx"
+                  style="content/shared.css">
+            </implementation>
+         </presentation>
+      </config>
+   </extension>
 
 </plugin>
